--- a/web/walk_dist.html
+++ b/web/walk_dist.html
@@ -13,6 +13,7 @@
 	<script src="apis/data.js"></script>
 	<script src="apis/game.js"></script>
 	<script src="apis/core.js"></script>
+	<script src="apis/data_structures/stack.js"></script>
 </head>
 
 <body>
