--- a/web/walk_dist.html
+++ b/web/walk_dist.html
@@ -14,6 +14,7 @@
 	<script src="apis/game.js"></script>
 	<script src="apis/core.js"></script>
 	<script src="apis/data_structures/stack.js"></script>
+	<script src="apis/data_structures/queue.js"></script>
 </head>
 
 <body>
