--- a/web/walk_dist.html
+++ b/web/walk_dist.html
@@ -15,6 +15,7 @@
 	<script src="apis/core.js"></script>
 	<script src="apis/data_structures/stack.js"></script>
 	<script src="apis/data_structures/queue.js"></script>
+	<script src="apis/data_structures/priorityqueue.js"></script>
 </head>
 
 <body>
